--- a/css/style.css
+++ b/css/style.css
@@ -318,7 +318,7 @@ img {
     /*top: 0;*/
     /*right: 0;*/
     /*bottom: 0;*/
-    left: -65%;
+    /*left: -65%;*/
     max-width: inherit;
 }
 
