--- a/css/style.css
+++ b/css/style.css
@@ -176,19 +176,25 @@ img {
 }
 
 .popular-list .number span {
-    font-size: 100px;
+    font-size: 60px;
     color: #7a858b;
 }
 
 .popular-list .media-left.number {
-    padding-right: 25px;
+    padding-right: 20px;
     font-style: italic;
     vertical-align: middle;
+    font-size: 60px;
+    padding-left: 10px;
+    color: #7a858b;
+    min-width: 80px;
+    text-align: center;
 }
 
 .popular-list .media-body h3 {
-    font-size: 19px;
+    font-size: 26px;
     color: #7a858b;
+    line-height: 100%;
 }
 
 .favorite-data,
@@ -323,18 +329,19 @@ img {
 }
 
 .title-article {
-    font-size: 19px;
+    font-size: 24px;
     color: #7a858b;
 }
 
 .favorite-data i {
-    font-size: 13px;
+    font-size: 20px;
 }
 
 .favorite-data span {
     position: relative;
-    top: -3px;
+    top: -5px;
     left: 3px;
+    font-size: 22px;
 }
 
 .latest {
@@ -347,6 +354,9 @@ img {
 
 .block-row {
     clear: both;
+}
+.title-content {
+    margin-bottom: 10px;
 }
 
 
@@ -467,6 +477,121 @@ img {
     font-size: 24px;
 }
 
+/*-- Profile --*/
+
+.add-newstory .feature-thumbnail {
+    background-color: #bddef0;
+}
+/*.add-newstory .feature-thumbnail img {
+    position: initial;
+    margin-left: auto;
+    margin-right: auto;
+}*/
+
+/*-- Story --*/
+
+.detail-count-box .favorite i {
+    color: #e76c6c;
+}
+.detail-count-box .bookmark i {
+    color: #71a9c9;
+}
+.detail-count-box .watched i {
+    color: #71a9c9;
+}
+.detail-count-box {
+    display: block;
+    float: left;
+    margin-top: 15px;
+}
+.detail-count-box i {
+    margin-right: 5px;
+    font-size: 14px;
+    position: relative;
+    top: 3px;
+}
+.detail-count-box span {
+    margin-right: 15px;
+}
+.bookmark-share {
+    float: right;
+    margin-top: 15px;
+}
+.detail-count-box .name-author {
+    color: #71a9c9;
+    font-style: italic;
+    position: relative;
+    top: -10px;
+}
+.detail-count-box span.favorite {
+    color: #e76c6c;
+}
+.post-date-data {
+    text-align: right;
+    color: #5b9eb3;
+    margin-bottom: 5px;
+    font-style: italic;
+    padding-right: 10px;
+}
+.detail-count-box .watched {
+    color: #71a9c9;
+}
+.detail-count-box .bookmark {
+    color: #71a9c9;
+}
+.excerpt {
+    clear: both;
+    font-size: 24px;
+    line-height: 120%;
+    margin-bottom: 15px;
+    color: #7a858b;
+    text-indent: 25px;
+}
+.story-section .media-body {
+    padding-top: 10px;
+}
+.story-section .list-group-item {
+    background-color: #e6e6e6;
+}
+.story-section .list-group-item.top-first {
+    background-color: #fff;
+}
+.author-relate-section .all-next {
+    margin-top: 25px;
+}
+
+/*-- Story Edit --*/
+
+.icon-edit {
+    background-color: #aecee0;
+    border-radius: 5px;
+    padding: 5px;
+}
+.icon-delete {
+    background-color: #e76c6c;
+    border-radius: 5px;
+    padding: 5px;
+}
+.edit-box {
+    overflow: hidden;
+    display: inline-block;
+    float: right;
+    margin-top: 15px;
+}
+.edit-delete-box {
+    /*overflow: hidden;*/
+    display: inline-block;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+}
+.edit-delete-box span {
+    float: left;
+}
+.post-date-data.edit-mode {
+    text-align: left;
+}
+
 @media (min-width: 768px) {
     /*.container-fluid>.navbar-collapse, .container-fluid>.navbar-header, .container>.navbar-collapse, .container>.navbar-header {
     margin-right: 0;
@@ -498,6 +623,12 @@ img {
     .popular-list .list-group {
         width: 50%;
         float: left;
+    }
+    .story-section .popular-list .list-group {
+        width: 95%;
+        float: none;
+        margin-left: auto;
+        margin-right: auto;
     }
     .col-3 {
         width: 16.6667%;
