ปรับ css และเพิ่มไฟล์ html
เพิ่ม profile.html / เพิ่มรูป

--- a/css/style.css
+++ b/css/style.css
@@ -355,6 +355,7 @@ img {
 .block-row {
     clear: both;
 }
+
 .title-content {
     margin-bottom: 10px;
 }
@@ -435,12 +436,14 @@ img {
     margin-top: 10px;
     max-width: 270px;
 }
+
 .comment-box {
     max-width: 750px;
     margin-left: auto;
     margin-right: auto;
     padding-bottom: 25px;
 }
+
 .footer-ep {
     overflow: hidden;
     background-color: #5d676c;
@@ -448,84 +451,138 @@ img {
     margin-right: -20px;
     margin-bottom: 30px;
 }
-.footer-ep .like-count, .footer-ep .like-count i {
+
+.footer-ep .like-count,
+.footer-ep .like-count i {
     color: #e76c6c;
 }
+
 .footer-ep .navigator-ep {
     color: #fff;
     text-align: center;
 }
+
 .footer-ep .like-count span.count {
     position: relative;
     margin-left: 5px;
     top: -1px;
     letter-spacing: 1px;
 }
+
 .footer-ep .like-count i {
     position: relative;
     top: 5px;
 }
+
 .navigator-ep .number-ep {
     font-size: 24px;
     font-style: italic;
     margin-right: 9px;
     margin-left: 6px;
 }
+
 .footer-ep .navigator-ep i {
     position: relative;
     top: 6px;
     font-size: 24px;
 }
 
+
 /*-- Profile --*/
 
 .add-newstory .feature-thumbnail {
     background-color: #bddef0;
 }
+.section-profile-author {
+    margin-bottom: -90px;
+}
+.section-profile-author + .section-row {
+    padding-top: 90px;
+}
+.head-titlebar img {
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 50%;
+    border: solid 4px #fff;
+    width: 75px;
+}
+.author-name h3 {
+    font-size: 36px;
+    color: #71a9c9;
+    font-style: italic;
+    text-align: center;
+    margin-top: 0px;
+    margin-bottom: 3px;
+}
+.botton-login button {
+    background-color: #71a9c9!important;
+    padding: 0px 15px;
+    min-width: 0px;
+    font-size: 20px;
+    text-transform: inherit;
+    color: #fff;
+    letter-spacing: 1px;
+    border-radius: 10px;
+}
+.botton-login {
+    text-align: center;
+}
+
+
 /*.add-newstory .feature-thumbnail img {
     position: initial;
     margin-left: auto;
     margin-right: auto;
 }*/
 
+
 /*-- Story --*/
 
 .detail-count-box .favorite i {
     color: #e76c6c;
 }
+
 .detail-count-box .bookmark i {
     color: #71a9c9;
 }
+
 .detail-count-box .watched i {
     color: #71a9c9;
 }
+
 .detail-count-box {
     display: block;
     float: left;
     margin-top: 15px;
 }
+
 .detail-count-box i {
     margin-right: 5px;
     font-size: 14px;
     position: relative;
     top: 3px;
 }
+
 .detail-count-box span {
     margin-right: 15px;
 }
+
 .bookmark-share {
     float: right;
     margin-top: 15px;
 }
+
 .detail-count-box .name-author {
     color: #71a9c9;
     font-style: italic;
     position: relative;
     top: -10px;
 }
+
 .detail-count-box span.favorite {
     color: #e76c6c;
 }
+
 .post-date-data {
     text-align: right;
     color: #5b9eb3;
@@ -533,12 +590,15 @@ img {
     font-style: italic;
     padding-right: 10px;
 }
+
 .detail-count-box .watched {
     color: #71a9c9;
 }
+
 .detail-count-box .bookmark {
     color: #71a9c9;
 }
+
 .excerpt {
     clear: both;
     font-size: 24px;
@@ -547,18 +607,23 @@ img {
     color: #7a858b;
     text-indent: 25px;
 }
+
 .story-section .media-body {
     padding-top: 10px;
 }
+
 .story-section .list-group-item {
     background-color: #e6e6e6;
 }
+
 .story-section .list-group-item.top-first {
     background-color: #fff;
 }
+
 .author-relate-section .all-next {
     margin-top: 25px;
 }
+
 
 /*-- Story Edit --*/
 
@@ -567,17 +632,20 @@ img {
     border-radius: 5px;
     padding: 5px;
 }
+
 .icon-delete {
     background-color: #e76c6c;
     border-radius: 5px;
     padding: 5px;
 }
+
 .edit-box {
     overflow: hidden;
     display: inline-block;
     float: right;
     margin-top: 15px;
 }
+
 .edit-delete-box {
     /*overflow: hidden;*/
     display: inline-block;
@@ -585,11 +653,59 @@ img {
     top: 20px;
     right: 20px;
 }
+
 .edit-delete-box span {
     float: left;
 }
+
 .post-date-data.edit-mode {
     text-align: left;
+}
+
+.add-new-chapter .icon-add {
+    color: #aecee0;
+    border: solid 2px;
+    border-radius: 5px;
+    padding: 8px;
+    margin-left: 6px;
+}
+
+.story-section .list-group-item.add-new-chapter {
+    background-color: #fff;
+    min-height: 80px;
+}
+
+.add-new-chapter .media-left,
+.add-new-chapter .media-body,
+.add-new-chapter .media-right {
+    vertical-align: middle;
+    height: 80px;
+}
+
+.add-new-chapter .media-body {
+    padding-top: 0px;
+}
+
+.edit-delete-box i {
+    margin-left: 8px;
+}
+
+.storyedit-section .list-group-item {
+    background-color: #fff;
+}
+
+.edit .pmd-dropdown-menu-bg {
+    background-color: #aecee0!important;
+}
+
+.delete .pmd-dropdown-menu-bg {
+    background-color: #e76c6c!important;
+}
+
+.edit .dropdown-menu > li > a,
+.delete .dropdown-menu > li > a {
+    color: #fff;
+    font-size: 24px;
 }
 
 @media (min-width: 768px) {
@@ -641,6 +757,11 @@ img {
     .title-numberep {
         max-width: 720px;
     }
+    .popular-list .media-left.number {
+        padding-right: 60px;
+        padding-left: 60px;
+        min-width: 170px;
+    }
 }
 
 @media (min-width: 992px) {
@@ -670,9 +791,9 @@ img {
     .search-box {
         display: none;
     }
-    .home-section-3 {
+    /*.home-section-3 {
         padding: 0px 0px;
-    }
+    }*/
     .bookmark-list-row .col-3:nth-child(1),
     .bookmark-list-row .col-3:nth-child(2),
     .bookmark-list-row .col-3:nth-child(3) {
@@ -687,4 +808,16 @@ img {
     .latest-list-row .block-row {
         display: none;
     }
+    .story-section {
+        margin-left: -30px;
+        margin-right: -30px;
+    }
+    .delete .pmd-dropdown-menu-container, .edit .pmd-dropdown-menu-container {
+        right: 0px;
+    }
+    .edit-delete-box {
+    top: initial;
+    bottom: 10px;
+    right: 20px;
+}
 }
