--- a/css/style.css
+++ b/css/style.css
@@ -1224,3 +1224,13 @@ form#add_story input[type=file] {
     display: block;
     width: 100%;
 }
+
+.picture-profile {
+    width: 150px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30px;
+}
+.form-register {
+    max-width: inherit;
+}
